[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "cmake>=3.16",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyCoverageControl"
version = "0.4.0"
description="Project for Coverage Control"
requires-python = ">=3.10"
authors = [
  {name = "Saurav Agarwal", email = "SauravAg@UPenn.edu" } # Optional
]

[tool.setuptools]
include-package-data = true
py-modules = []
